# RF_LoadDotEnv

./: .gitignore  README.md  base.resource  log.html  output.xml  pyproject.toml  report.html
resources/env/hml/: .env
resources/env/prod/: .env
resources/env/sandbox/: .env
resources/libs/DotEnv/: __init__.py
tests/: LoadDotEnv.robot
